examples/test/testpolicy10978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10978
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key47: value4
      key34: value43
      key28: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value41
      podSelector:
        matchLabels:
          key8: value1
          key42: value16
          key49: value24
